tests/paczka1/small_fuzzy/63695760.err
Error in line 2: wIBwC S647 70,3
Error in line 3: 2taSC6 S647 68,8
Error in line 6: 2taSC6 S442 22,7
Error in line 12: JTv2gR S442 16,1
Error in line 13: 7nmtTMlHVwc S647 94,7
